input: create shape cursor source before using it

BUG: 472358